# Anaconda

./: .gitignore  Cargo.toml  calculate_number.an  lexer_bait.an  print_nums.an  test.an
src/: generate_bytecode.rs  grammar.txt  lexer.rs  main.rs  parser.rs  runtime.rs  util.rs
src/generate_bytecode/: bytecode_generator.rs  set_has_return_value.rs
src/lexer/: lex.rs
src/parser/: ast.rs  bytecode.rs  generate_bytecode.rs  validator.rs
src/runtime/: bytecode.rs  gc.rs
