[package]
name = "anaconda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.1.18", features=["derive"]}
color-eyre = "0.6.1"
counted-array = { version = "0.1.2", features = ["lazy_static"] }
lazy_static = "1.4.0"
pretty_assertions = "1.2.1"
ibig = "0.3.5"
termcolor = "1.1.3"
twox-hash = "1.6.3"
num_enum = "0.5.7"
impls = "1.0.3"
